@@ -1,5 +1,8 @@
 //it's lazy updated file, so the real ChangeLog is the activity on github
 
++ Edit - Select all
+- Context menu
+
 * Qt6 copy text with new lines - fixed
 * Markdown functions - fixes 
 
